--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   backend:
     build: ./backnend
     ports:
-      -"4000:4000"
-    env-file:
+      - "4000:4000"
+    env_file:
       - ./backend/.env
     depends_on:
       - frontend
@@ -13,5 +13,5 @@ services:
     build: ./frontend
     ports:
       - "3000:3000"
-    env-file:
+    env_file:
       - ./frontend/.env
