render changes for wss compatibility

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,7 @@
-BACKEND_URL = http://localhost:3000
-WEBSOCKET_URL = ws://localhost:3002
+BACKEND_URL=https://ai-customer-support-1.onrender.com
+WEBSOCKET_URL=ws://ai-customer-support-1.onrender.com
+# REACT_APP_BACKEND_URL=http://ai-customer-support-1.onrender.com
+# REACT_APP_WEBSOCKET_URL=ws://ai-customer-support-1.onrender.com
+
+REACT_APP_BACKEND_URL=http://localhost:3000
+REACT_APP_WEBSOCKET_URL=ws://localhost:3000
