--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,7 +1,2 @@
-BACKEND_URL=https://ai-customer-support-1.onrender.com
-WEBSOCKET_URL=ws://ai-customer-support-1.onrender.com
-# REACT_APP_BACKEND_URL=http://ai-customer-support-1.onrender.com
-# REACT_APP_WEBSOCKET_URL=ws://ai-customer-support-1.onrender.com
-
-REACT_APP_BACKEND_URL=http://localhost:3000
-REACT_APP_WEBSOCKET_URL=ws://localhost:3000
+REACT_APP_BACKEND_URL = http://localhost:3000
+REACT_APP_WEBSOCKET_URL = ws://localhost:3000
