--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/cheryldsouza10/ai-customer-support#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
